--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LoginMedMart">
-        <activity android:name=".VerifyOtp"></activity>
-        <activity android:name=".ForgetPasswrod" />
-        <activity android:name=".Stub"></activity>
+        <activity android:name=".ForgotPassword.ForgetPasswordSuccessMessage"></activity>
+        <activity android:name=".ForgotPassword.SetNewPassword" />
+        <activity android:name=".ForgotPassword.VerifyOtp" />
+        <activity android:name=".ForgotPassword.ForgetPassword" />
+        <activity android:name=".Stub" />
         <activity android:name=".SignUp" />
         <activity android:name=".MainActivity">
             <intent-filter>
