--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LoginMedMart">
-        <activity android:name=".ForgotPassword.ForgetPasswordSuccessMessage"></activity>
-        <activity android:name=".ForgotPassword.SetNewPassword" />
-        <activity android:name=".ForgotPassword.VerifyOtp" />
-        <activity android:name=".ForgotPassword.ForgetPassword" />
-        <activity android:name=".Stub" />
-        <activity android:name=".SignUp" />
-        <activity android:name=".LoginActivity">
+        <activity android:name=".ForgotPassword.ForgetPasswordSuccessMessage">
+            android:screenOrientation="portrait"
+        </activity>
+        <activity android:name=".ForgotPassword.SetNewPassword"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ForgotPassword.VerifyOtp"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ForgotPassword.ForgetPassword"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Stub"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".SignUp"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".LoginActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
