--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,20 +12,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LoginMedMart">
-        <activity android:name=".ForgotPassword.ForgetPasswordSuccessMessage">
+        <activity android:name=".ForgotPasswordActivities.ForgetPasswordSuccessMessage">
             android:screenOrientation="portrait"
         </activity>
-        <activity android:name=".ForgotPassword.SetNewPassword"
+        <activity android:name=".ForgotPasswordActivities.SetNewPassword"
             android:screenOrientation="portrait"/>
-        <activity android:name=".ForgotPassword.VerifyOtp"
+        <activity android:name=".ForgotPasswordActivities.VerifyOtp"
             android:screenOrientation="portrait"/>
-        <activity android:name=".ForgotPassword.ForgetPassword"
+        <activity android:name=".ForgotPasswordActivities.ForgetPassword"
             android:screenOrientation="portrait"/>
         <activity android:name=".Stub"
             android:screenOrientation="portrait"/>
-        <activity android:name=".SignUp"
+        <activity android:name=".LoginSignUpActivites.SignUp"
             android:screenOrientation="portrait"/>
-        <activity android:name=".LoginActivity"
+        <activity android:name=".LoginSignUpActivites.LoginActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
