--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LoginMedMart">
-        <activity android:name=".HomeActivity.HomePage"></activity>
+        <activity android:name=".SearchActivity.Search"></activity>
+        <activity android:name=".HomeActivity.HomePage" />
         <activity android:name=".ForgotPasswordActivities.ForgetPasswordSuccessMessage">
             android:screenOrientation="portrait"
         </activity>
@@ -24,9 +25,6 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ForgotPasswordActivities.ForgetPassword"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".Stub"
             android:screenOrientation="portrait" />
         <activity
             android:name=".LoginSignUpActivites.SignUp"
