--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
     compileOnly 'com.google.android.wearable:wearable:2.6.0'
     implementation 'com.chaos.view:pinview:1.4.3'
+    implementation 'com.google.android.libraries.places:places:2.4.0'
 
 }
