--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LoginMedMart">
-        <activity android:name=".MapActivity.PlacesSearch"></activity>
+        <activity android:name=".CategoryProductsActivity.CategoryProducts"></activity>
+        <activity android:name=".ProductResultActivity.ProductResult"></activity>
+        <activity android:name=".MapActivity.PlacesSearch" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -32,7 +34,7 @@
 
         <activity
             android:name=".MapActivity.Maps"
-            android:label="@string/title_activity_maps"></activity>
+            android:label="@string/title_activity_maps" />
         <activity android:name=".ProfileActivity.ProfileActivity" />
         <activity android:name=".SearchActivity.Search" />
         <activity android:name=".HomeActivity.HomePage" />
