--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,5 +52,6 @@ dependencies {
     compileOnly 'com.google.android.wearable:wearable:2.6.0'
     implementation 'com.chaos.view:pinview:1.4.3'
     implementation 'com.google.android.libraries.places:places:2.4.0'
+    implementation 'com.razorpay:checkout:1.6.6'
 
 }
