--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LoginMedMart">
-        <activity android:name=".CartActivity.Cart"></activity>
+        <activity android:name=".ManageOrderActivity.ManageOrder"></activity>
+        <activity android:name=".CartActivity.Cart" />
         <activity android:name=".ShopInventoryActivity.ShopInventory" />
         <activity
             android:name=".CategoryProductsActivity.CategoryProducts"
